# easydataset

./: README.md  birds.db  easyDataset.py  easySQL.py  names.db
Package/: install.bat  packager.bat
Package/V0.0.0-beta/: README.md  pyproject.toml  setup.cfg  setup.py
Package/V0.0.0-beta/easyDataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Package/V0.0.0-beta/src/easySQL/: __init__.py
Tests/: easySQL_test.py
