[metadata]
name = easyDataset-password-classified
version = 0.0.0
author = Password Classified
author_email = user@example.com
description = A Python module to make interacting with databases easier and faster, a wrapper for other alternatives.
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/Password-Classified/easySQL
project_urls =
    Bug Tracker = https://github.com/Password-Classified/easySQL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src